fixed JS eventlistener, collapsing with bootstrap, and fix height to boxes

--- a/app/assets/stylesheets/pages/_contact.scss
+++ b/app/assets/stylesheets/pages/_contact.scss
@@ -68,8 +68,8 @@
   margin: 0 4px;
 }
 
-#button-show-personnal {
-    cursor: grabbing;
+.show-more {
+    cursor: clicker;
     text-align: center;
     background: linear-gradient(185deg, rgba(250,250,250,0.9094012605042017) 36%, rgba(244,244,244,0.8645833333333334) 58%);
 
